# pytest-tldr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  pytest_tldr.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
changes/: 24.misc.rst  26.bugfix.rst  28.bugfix.rst  32.bugfix.rst  36.bugfix.rst  37.misc.rst  38.feature.1.rst  38.feature.3.rst  38.feature.4.rst  38.misc.rst  template.rst
tests/: test_collection.py  test_plugins.py  test_pytest.py  test_unittest.py
