[build-system]
requires = [
    "setuptools >= 43.0.0",
    "wheel >= 0.32.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
skip_glob = [
    "docs/conf.py",
    "venv*",
    "local",
]
multi_line_output = 3

[tool.towncrier]
directory = "changes"
package = "pytest_tldr"
filename = "CHANGELOG.rst"
title_format = "{version} ({project_date})"
template = "changes/template.rst"
