[aliases]
test=pytest

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=local/*,docs/*,src/django/node_modules/*
max-complexity = 10
max-line-length = 119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901

[metadata]
description-file = README.md

[bdist_wheel]
universal=1

[tool:pytest]
addopts = --verbose --cov=. --cov-report xml
