[metadata]
name = pytest-tldr
version = attr: pytest_tldr.__version__
url = https://github.com/freakboy3742/pytest-tldr
# download_url =
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license = BSD-3
license_file = LICENSE
description = A pytest plugin that limits the output to just the things you need.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=utf-8
keywords = pytest
# platforms=
# provides=
# requires=
# obsoletes=

[project_urls]
Funding = https://beeware.org/contributing/membership/
# Documentation = https://toga.readthedocs.io/
Tracker = https://github.com/freakboy3742/pytest-tldr/issues
Source = https://github.com/freakboy3742/pytest-tldr

[options]
zip_safe = False
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    pytest >= 3.5.0
setup_requires =
    pytest >= 3.5.0
    pytest-runner
tests_require =
    pytest-cov
py_modules =
    pytest_tldr
[options.entry_points]
pytest11 =
    tldr = pytest_tldr

[aliases]
test=pytest

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=local/*,docs/*,src/django/node_modules/*
max-complexity = 10
max-line-length = 119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901

[bdist_wheel]
universal=1

[tool:pytest]
addopts = --verbose --cov=. --cov-report xml
